<resources>
    <string name="app_name">Facial Expression ML</string>
    <string name="email_h">Enter Email</string>
    <string name="password_h">Enter Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="existinguser_login">Already have an Account? Login Here.</string>
    <string name="forgotpass"> Forgot Password? </string>
    <string name="pls">Please Enter Your Email for Reset your password</string>
    <string name="rpass">Reset Password</string>
    <string name="res">Reset</string>
    <string name="signout">Log Out</string>
    <string name="freeze">Unfreeze/Freeze Camera</string>
    <string name="about">About Developer</string>
    <string name="frontcamera">Switch Front Camera</string>
    <string name="profile">Profile</string>
    <string name="itsok">I Remember My Password Now</string>
    <string name="a">Please Enter Email</string>
    <string name="b">Please Enter Password</string>
    <string name="c">The Password Must Be More Than 6 Letters </string>
    <string name="switchtf">Switch Camera</string>
    <string name="exit">Exit</string>
    <string name="emotion">Emotion Confidence: </string>
    <string name="n">null</string>
    <string name="n_n">0.0000000000</string>
    <string name="emo_what">Q1: How do you feel?</string>
    <string name="stateyourstresslevel">Q2: Please State Your Stress Level:</string>
    <string name="setting">Setting</string>
    <string name="about_dev">About</string>
    <string name="analyse">Click To Analyse 💁‍♀</string>
    <string name="analyse_after">Analysing… 👨‍💻 </string>
    <string name="analyse_after_done">Done 👍 </string>
    <string name="Share">Export To Database</string>
    <string name="comment">Comment 💬</string>
    <string name="happy">Happy 😁</string>
    <string name="sad">Sad 😥</string>
    <string name="neutral">Neutral 😐</string>
    <string name="dk">I am so clueless </string>
    <string name="other">Other 😕</string>
    <string name="ee">Emotion: </string>
    <string name="eeeee">Stress-free,   So-So,  Headache,   Severe-Stress</string>
    <string name="title_activity_settings">Settings</string>
    <string name="shorcut_msg">Start</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="user_profile">Profile</string>
    <string name="disp">Display</string>
    <string name="disp_LP">Force Landscape/Portrait mode</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="Other">Other</string>
    <string name="report">Email To Developer</string>
    <string name="prediction">Prediction: </string>
    <string name="save_img">Data Successfully Saved to </string>
    <string name="save_img_failed">Data Failed To Save. </string>
    <string name="sdx_grant_storage">Go to Permissions to Grant Storage</string>
</resources>
