<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="221dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.johnmelodyme.facialexpressionml.Helper.GraphicOverlay
            android:id="@+id/GO"
            android:layout_width="238dp"
            android:layout_height="221dp"
            android:layout_gravity="center" />

        <com.wonderkiln.camerakit.CameraView
            android:id="@+id/CAMERA"
            android:layout_width="238dp"
            android:layout_height="221dp"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            app:ckFacing="front">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gif"
                android:layout_width="238dp"
                android:layout_height="221dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:src="@mipmap/load" />
        </com.wonderkiln.camerakit.CameraView>
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/emotion" />

        <TextView
            android:id="@+id/emotion"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@+id/cal"
            android:layout_toEndOf="@+id/textView3"
            android:foregroundGravity="top|right|fill"
            android:gravity="right"
            android:text="@string/n"
            android:textAlignment="center"
            android:textColor="#E91E63"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/cal"
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="22dp"
            android:text="@string/n_n"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textStyle="italic" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <TextView
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emo_what"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question1">

            <RadioButton
                android:id="@+id/Happy"
                android:layout_width="78dp"
                android:layout_height="23dp"
                android:layout_marginEnd="1dp"
                android:text="@string/happy"
                app:layout_constraintEnd_toStartOf="@+id/Sad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question1" />

            <RadioButton
                android:id="@+id/Neutral"
                android:layout_width="80dp"
                android:layout_height="23dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:text="@string/neutral"
                app:layout_constraintEnd_toStartOf="@+id/Other"
                app:layout_constraintStart_toEndOf="@+id/Sad"
                app:layout_constraintTop_toBottomOf="@+id/question1" />

            <RadioButton
                android:id="@+id/Sad"
                android:layout_width="60dp"
                android:layout_height="23dp"
                android:layout_marginStart="1dp"
                android:text="@string/sad"
                app:layout_constraintEnd_toStartOf="@+id/Neutral"
                app:layout_constraintStart_toEndOf="@+id/Happy"
                app:layout_constraintTop_toBottomOf="@+id/question1" />

            <RadioButton
                android:id="@+id/Other"
                android:layout_width="80dp"
                android:layout_height="23dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="116dp"
                android:text="@string/other"
                app:layout_constraintEnd_toEndOf="parent" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>