<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/galaxy_blur"
    tools:context=".Login">

    <EditText
        android:id="@+id/email_login"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="54dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:fontFamily="@font/amita"
        android:hint="@string/email_h"
        android:importantForAutofill="auto"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/textinput"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="54dp"
        android:background="@drawable/edittext"
        android:ems="10"
        android:fontFamily="@font/amita"
        android:hint="@string/password_h"
        android:importantForAutofill="auto"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/textinput"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="303dp"
        android:layout_height="59dp"
        android:background="@drawable/ripple"
        android:fontFamily="@font/amita"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="420dp" />
</androidx.constraintlayout.widget.ConstraintLayout>